--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BuildCheck AI - Design compliance made simple.</title>
-  <link rel="stylesheet" href="./style.css?v=1">
+  <link rel="stylesheet" href="./style.css?v=2">
 
 </head>
 <body>
@@ -70,6 +70,7 @@
 
   // Get the close button
   const closeButton = document.querySelector('.close-button');
+  const squareButton = document.querySelector('#bc div.square');
   const waitlistButton = document.querySelector('.glow .button');
   const contactButton = document.querySelector('.site-header .contact-button');
 
