--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BuildCheck AI - Design compliance made simple.</title>
-  <link rel="stylesheet" href="./style.css?v=4">
+  <link rel="stylesheet" href="./style.css?v=5">
 
 </head>
 <body>
@@ -100,12 +100,12 @@
 
   });
 
-  squareButton.addEventListener('click', function () {
-    squareButton.classList.add('pulse');
-    setTimeout(function () {
-      squareButton.classList.remove('pulse');
-    }, 600);
-  })
+  // squareButton.addEventListener('click', function () {
+  //   squareButton.classList.add('pulse');
+  //   setTimeout(function () {
+  //     squareButton.classList.remove('pulse');
+  //   }, 600);
+  // })
   //
 
 
