Add founders and solution page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
 <header class="site-header">
   <div class="site-name">Build<span class="colored">Check</span> AI</div>
 <!--  <div class="design">Design compliance made simple.</div>-->
+  <nav>
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/solution.html">Our Solution</a></li>
+      <li><a href="/team.html">Team</a></li>
+    </ul>
+  </nav>
   <button class="contact-button">Contact sales</button>
 </header>
 
