Update styles for sales popup

--- a/team.html
+++ b/team.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuildCheck AI - Meet Our Team</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./team.css">
+    <link rel="stylesheet" href="./style.css?v=7">
+    <link rel="stylesheet" href="./team.css?v=7">
 </head>
 <body>
 <div id="bc" class="container">
