--- a/solution.html
+++ b/solution.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuildCheck AI - Spell check for project design</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./solution.css">
+    <link rel="stylesheet" href="./style.css?v=7">
+    <link rel="stylesheet" href="./solution.css?v=7">
 </head>
 <body>
 <div id="bc" class="container">
