Fix styles for header and button

--- a/solution.html
+++ b/solution.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuildCheck AI - Spell check for project design</title>
-    <link rel="stylesheet" href="./style.css?v=7">
-    <link rel="stylesheet" href="./solution.css?v=7">
+    <link rel="stylesheet" href="./style.css?v=8">
+    <link rel="stylesheet" href="./solution.css?v=8">
 </head>
 <body>
 <div id="bc" class="container">
@@ -22,10 +22,12 @@
     </header>
 
     <h1 class="text-header">The “Spell Check” for Project Design</h1>
+    <div class="team-row">
 
     <p class="solution-description">
         Powered by machine learning, we provide a design management platform that helps architecture, engineering and construction ("AEC") professionals analyze whether their drawings, specifications and other documents comply with the applicable regulatory and contractual requirements.
     </p>
+    </div>
 
     <div class="h-global-transition-all">© 2023 BuildCheck AI, Inc. All rights reserved.</div>
 </div>
