Join the Waitlist

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <li><a href="/team.html">Team</a></li>
     </ul>
   </nav>
-  <button class="contact-button">Contact sales</button>
+  <button class="contact-button">Join the Waitlist</button>
 </header>
 
 
