--- a/solution.html
+++ b/solution.html
@@ -18,7 +18,7 @@
                 <li><a href="/team.html">Team</a></li>
             </ul>
         </nav>
-        <button class="contact-button">Contact sales</button>
+        <button class="contact-button">Join the Waitlist</button>
     </header>
 
     <h1 class="text-header">The “Spell Check” for Project Design</h1>
