Make responsive design

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BuildCheck AI - Design compliance made simple.</title>
-  <link rel="stylesheet" href="./style.css?v=8">
+  <link rel="stylesheet" href="./style.css?v=9">
 
 </head>
 <body>
@@ -13,7 +13,7 @@
 <header class="site-header">
   <div class="site-name">Build<span class="colored">Check</span> AI</div>
 <!--  <div class="design">Design compliance made simple.</div>-->
-  <nav>
+  <nav class="desktop-navigation">
     <ul>
       <li><a href="/">Home</a></li>
       <li><a href="/solution.html">Our Solution</a></li>
@@ -22,7 +22,13 @@
   </nav>
   <button class="contact-button">Join the Waitlist</button>
 </header>
-
+  <nav class="mobile-navigation">
+    <ul>
+      <li><a href="/">Home</a></li>
+      <li><a href="/solution.html">Our Solution</a></li>
+      <li><a href="/team.html">Team</a></li>
+    </ul>
+  </nav>
 
   <div class="square box">Build<span class="colored">Check</span> AI</div>
 
