--- a/solution.html
+++ b/solution.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BuildCheck AI - Spell check for project design</title>
-    <link rel="stylesheet" href="./style.css?v=8">
-    <link rel="stylesheet" href="./solution.css?v=8">
+    <link rel="stylesheet" href="./solution.css?v=9">
+    <link rel="stylesheet" href="./style.css?v=9">
 </head>
 <body>
 <div id="bc" class="container">
     <header class="site-header">
         <div class="site-name">Build<span class="colored">Check</span> AI</div>
-        <nav>
+        <nav class="desktop-navigation">
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/solution.html">Our Solution</a></li>
@@ -20,7 +20,13 @@
         </nav>
         <button class="contact-button">Join the Waitlist</button>
     </header>
-
+    <nav class="mobile-navigation">
+        <ul>
+            <li><a href="/">Home</a></li>
+            <li><a href="/solution.html">Our Solution</a></li>
+            <li><a href="/team.html">Team</a></li>
+        </ul>
+    </nav>
     <h1 class="text-header">The “Spell Check” for Project Design</h1>
     <div class="team-row">
 
