Make responsive design. Change wording

--- a/solution.html
+++ b/solution.html
@@ -27,11 +27,11 @@
             <li><a href="/team.html">Team</a></li>
         </ul>
     </nav>
-    <h1 class="text-header">The “Spell Check” for Project Design</h1>
+    <h1 class="text-header">Design Compliance Made Simple</h1>
     <div class="team-row">
 
     <p class="solution-description">
-        Powered by machine learning, we provide a design management platform that helps architecture, engineering and construction ("AEC") professionals analyze whether their drawings, specifications and other documents comply with the applicable regulatory and contractual requirements.
+        Powered by machine learning, BuildCheck is a design management platform that helps architecture, engineering and construction professionals analyze whether their drawings, specifications and other documents comply with the applicable regulatory and contractual requirements.
     </p>
     </div>
 
