--- a/team.html
+++ b/team.html
@@ -34,14 +34,14 @@
         <div class="team-member">
             <img class="team-photo" src="andrei.jpg" alt="Co-Founder 1">
             <h2>Andrei Molchynsky</h2>
-            <h3>Co-Founder & Board Member</h3>
+            <h3>Co-Founder</h3>
             <p>An attorney licensed in New York and Quebec, Andrei practiced corporate law at Norton Rose Fulbright LLP and worked as general counsel and director of corporate development for the family office of the founder of Cirque du Soleil. Andrei helped to develop an asset management strategy for a 2-phased development of Maison-Alcan, iconic Montréal mixed-use project, and for an 18-acre master-planned, mixed-use development of Magic City Innovation District-Little Haiti in Miami, FL.</p>
         </div>
 
         <div class="team-member">
             <img class="team-photo" src="alexg.jpg" alt="Co-Founder 2">
             <h2>Oleksandr Gureiev</h2>
-            <h3>Co-Founder & Board Member</h3>
+            <h3>Co-Founder</h3>
             <p>Alex led teams of dozens of programmers across the globe to design and build large-scale web products. At Deloitte, he spearheaded the development of the Exalink platform, which was later acquired by Model N for $60 million. Alex has built a range of products, from bootstrapping a mobile app builder for influencers to developing enterprise-grade systems that supported billion-dollar transactions annually.</p>
         </div>
     </div>
