--- a/team.html
+++ b/team.html
@@ -35,7 +35,7 @@
             <img class="team-photo" src="andrei.jpg" alt="Co-Founder 1">
             <h2>Andrei Molchynsky</h2>
             <h3>Co-Founder</h3>
-            <p>An attorney licensed in New York and Quebec, Andrei practiced corporate law at Norton Rose Fulbright LLP and worked as general counsel and director of corporate development for the family office of the founder of Cirque du Soleil. Andrei helped to develop an asset management strategy for a 2-phased development of Maison-Alcan, iconic Montréal mixed-use project, and for an 18-acre master-planned, mixed-use development of Magic City Innovation District-Little Haiti in Miami, FL.</p>
+            <p>An attorney licensed in New York and Quebec, Andrei practiced corporate law at Norton Rose Fulbright LLP and worked as general counsel and director of corporate development for the family office of the founder of Cirque du Soleil. Andrei has participated in the development of an asset management strategy for a 2-phased development of Maison-Alcan, iconic Montréal mixed-use project, and for an 18-acre master-planned, mixed-use development of Magic City Innovation District-Little Haiti in Miami, FL.</p>
         </div>
 
         <div class="team-member">
