--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>BuildCheck AI - Design compliance made simple.</title>
-  <link rel="stylesheet" href="./style.css?v=7">
+  <link rel="stylesheet" href="./style.css?v=8">
   <script>
     window['_fs_host'] = 'fullstory.com';
     window['_fs_script'] = 'edge.fullstory.com/s/fs.js';
@@ -51,7 +51,7 @@
   <div class="button-container glow">
     <a class='button'>Join the Waitlist</a>
   </div>
-  <div class="h-global-transition-all">© 2023 BuildCheck AI, Inc. All rights reserved. <a href="/BuildCheck_Privacy_Policy.pdf">Privacy Policy</a></div>
+  <div class="h-global-transition-all">© 2023 BuildCheck AI, Inc. All rights reserved. <a href="/BuildCheck_Terms_and_Conditions.pdf">Terms and Conditions</a>. <a href="/BuildCheck_Privacy_Policy.pdf">Privacy Policy</a></div>
 </div>
 <!-- partial -->
 
